option('audiodecbin', type : 'feature', value : 'auto', description : 'Decoder bin for Dolby audio formats.', yield : true)
option('ac3', type : 'feature', value : 'auto', description : 'AC-3/EAC-3 plugins for parsing and decoding.', yield : true)
option('oar', type : 'feature', value : 'auto', description : 'Audio Object Renderer.', yield : true)
option('dap', type : 'feature', value : 'auto', description : 'Audio Processing.', yield : true)
option('meta', type : 'feature', value : 'auto', description : 'Metadata core library.', yield : true)
option('utils', type : 'feature', value : 'auto', description : 'Utils core library.', yield : true)
option('tests', type : 'feature', value : 'auto', description : 'Elements unit tests.', yield : true)
option('typefind', type : 'feature', value : 'auto', description : 'Tyepfind element for Dolby formats.', yield : true)
option('distsubproj', type : 'combo', choices : ['none', 'export', 'strip'], value : 'none', description : 'Action to be performed on subprojects when creating dist package')
